add gitignore and set log days
