# models/user.go
@@ -1,30 +1,40 @@
 package models
 
 import (
+	"fmt"
+	"log"
 	"time"
 )
 
 // User 用户
 type User struct {
-	ID        uint `gorm:"primary_key"`
-	CreatedAt time.Time
-	UpdatedAt time.Time
-	Name string
-	Role Role
-	RoleID int64
-	Email string
+	ID          int64 `gorm:"primary_key"`
+	CreatedAt   time.Time
+	UpdatedAt   time.Time
+	Username    string
+	Password    string
+	Role        Role
+	RoleID      int64
+	Email       string
+	Token       string
+	mobile      string `gorm:"type:varchar(30)"`
 	LastLoginAt time.Time
-	Count  int64  // 登录次数
+	Count       int64 // 登录次数
 }
 
-// UserFieldForAdd 添加用户所需字段
-type UserFieldForAdd struct {
-	Name string `db:"name"`
-	Role int64  `db:"role"`
+// UserForAdd 添加用户所需字段
+type UserForAdd struct {
+	Username string
+	Password string
+	RoleID   int64
+	Email    string
+	mobile   string
 }
+
 func (User) TableName() string {
 	return "users"
 }
+
 //UserGet 获取用户
 func UserGet(nowPage int, pageSize int) ([]User, error) {
 	//tx := DB.MustBegin()
@@ -34,8 +44,20 @@ func UserGet(nowPage int, pageSize int) ([]User, error) {
 }
 
 //UserAdd 添加用户
-func UserAdd(u *UserFieldForAdd) (int64, error) {
-
-	return 0, nil
-
+func UserAdd(u *User) (int64, error) {
+	var role Role
+	u.LastLoginAt = time.Now()
+	db := db.Model(&u).Related(&role)
+	fmt.Printf("%+v\n", role)
+	if db.Error != nil {
+		log.Printf("can not find the role of user: %v\n", err)
+		return 0, db.Error
+	}
+	fmt.Printf("%+v\n", u)
+	db = db.Create(&u)
+	if db.Error != nil {
+		log.Printf("creat user error: %v\n", err)
+		return 0, db.Error
+	}
+	return u.ID, nil
 }
